--- a/index.html
+++ b/index.html
@@ -124,14 +124,14 @@
       button {
         cursor: pointer;
         border-radius: 50%;
-        padding: 15px;
+        padding: 10px 16px;
         border-radius: 40px;
         margin-top: 10px;
         outline: none;
         border: none;
         color: #ffffff;
         font-weight: 600;
-        background: linear-gradient(45deg, black, transparent);
+        background: #565658;
         margin-bottom: 10px;
       }
       @media (max-width: 767px) {
@@ -186,11 +186,11 @@
           <div class="bg-blue pt-4">
             <div>
               <h3 class="nexabold text-white bg-blue text-center">
-                Click here for construction updates
+                Click here to learn more
               </h3>
             </div>
             <div class="text-center">
-              <button>Get Update</button>
+              <button>Learn more</button>
             </div>
           </div>
         <footer style="max-width: 650px; margin: 0 auto" class="pt-3">
