--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
                   <img src="https://himanshu1998-coder.github.io/amulyamailerinages/mailer3/amenities.jpg" alt="..." width="100%">
               </div>
           </section>
-          <div class="bg-blue pt-4">
+          <div class="pt-4">
             <div>
-              <h3 class="nexabold text-white bg-blue text-center">
+              <h3 class="nexabold text-white text-center">
                 Click here to learn more
               </h3>
             </div>
