--- a/index.html
+++ b/index.html
@@ -183,9 +183,14 @@
                   <img src="https://himanshu1998-coder.github.io/amulyamailerinages/mailer3/amenities.jpg" alt="..." width="100%">
               </div>
           </section>
-          <div class="pt-4">
+          <div class="pt-3">
+            <div>
+              <h3 class="nexabold text-center">
+                To know more click here
+              </h3>
+            </div>
             <div class="text-center">
-              <button>Learn more</button>
+              <button>Click Here</button>
             </div>
           </div>
         <footer style="max-width: 650px; margin: 0 auto" class="pt-3">
