--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           <div class="pt-3">
             <div>
               <h3 class="nexabold text-center">
-                To know more click here
+                To know more
               </h3>
             </div>
             <div class="text-center">
