--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
           </section>
           <div class="pt-3">
             <div>
-              <h3 class="nexabold text-center">
+              <h2 class="nexabold text-center text-blue">
                 To know more
-              </h3>
+              </h2>
             </div>
             <div class="text-center">
               <button>Click Here</button>
