--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
         font-weight: 600;
         background: #565658;
         margin-bottom: 10px;
+        font-size: 16px;
       }
       @media (max-width: 767px) {
         .f-md-11 {
