--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         right: -35px;
         top: -10px;
       }
-      button {
+      .button {
         cursor: pointer;
         border-radius: 50%;
         padding: 10px 16px;
@@ -190,8 +190,8 @@
                 To know more
               </h2>
             </div>
-            <div class="text-center">
-              <button>Click Here</button>
+            <div class="text-center mt-2">
+              <a type="button" class="button nexabold" href="https://www.kgkrealty.com/jaipurproperty/amulyaprop/">Click Here</a>
             </div>
           </div>
         <footer style="max-width: 650px; margin: 0 auto" class="pt-3">
