--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <header>
             <div>
               <img
-                src="https://himanshu1998-coder.github.io/amulyamailerinages/mailer3/WhatsApp%20Image%202021-06-03%20at%204.59.13%20PM.jpeg"
+                src="https://himanshu1998-coder.github.io/amulyamailerinages/mailer4/header4.jpeg"
                 alt="..."
                 width="100%"
               />
@@ -183,14 +183,9 @@
                   <img src="https://himanshu1998-coder.github.io/amulyamailerinages/mailer3/amenities.jpg" alt="..." width="100%">
               </div>
           </section>
-          <div class="pt-3">
-            <div>
-              <h2 class="nexabold text-center text-blue">
-                To know more
-              </h2>
-            </div>
-            <div class="text-center mt-3">
-              <a type="button" class="button nexabold" href="https://www.kgkrealty.com/jaipurproperty/amulyaprop/">Click Here</a>
+          <div class="bg-blue pb-1 pt-1">
+            <div class="text-center">
+              <a class="nexabold text-white" href="https://www.kgkrealty.com/jaipurproperty/amulyaprop/" >Want to know more...? Click here!</a>
             </div>
           </div>
         <footer style="max-width: 650px; margin: 0 auto" class="pt-3">
@@ -212,13 +207,15 @@
             </h3>
             <h3 class="text-center">
               <a
-                href="tel: +911412720557"
-                class="tel-sells nexalight gray f-16 f-md-11"
-                >T:+911412720557 </a
-              ><a
+                href="tel: +91 9982-991-199"
+                class="tel-sells nexalight gray f-20 f-md-11"
+                ><i class="fas fa-phone-square-alt f-20 text-blue"></i> +91
+                9982-991-199</a
+              >|<a
                 href="sales@kgkrealty.com"
-                class="tel-sells nexalight gray f-16 f-md-11"
-                >| E:sales@kgkrealty.com</a
+                class="tel-sells nexalight gray f-20 f-md-11"
+                ><i class="fas fa-envelope f-16 text-blue"></i>
+                mail@kgkrealty.com</a
               >
             </h3>
           </div>
@@ -229,6 +226,9 @@
               ></a>
               <a href="https://www.instagram.com/kgk_realty/?hl=en"
                 ><i class="fab fa-instagram f-20 text-blue"></i
+              ></a>
+              <a href="https://twitter.com/kgkrealty"
+                ><i class="fab fa-twitter-square f-20 text-blue"></i
               ></a>
               <a href="https://www.linkedin.com/company/kgk-realty/"><i class="fab fa-linkedin f-20 text-blue"></i></a>
               <a href="https://www.kgkrealty.com/"
