--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
         margin-bottom: 10px;
         font-size: 16px;
       }
+      .f-19{
+        font-size: 19px;
+      }
       @media (max-width: 767px) {
         .f-md-11 {
           font-size: 11px !important;
@@ -185,7 +188,7 @@
           </section>
           <div class="bg-blue pb-1 pt-1">
             <div class="text-center">
-              <a class="nexabold text-white" href="https://www.kgkrealty.com/jaipurproperty/amulyaprop/" >Want to know more...? Click here!</a>
+              <a class="nexabold text-white f-19" href="https://www.kgkrealty.com/jaipurproperty/amulyaprop/" target="_blank">Want to know more...? Click here!</a>
             </div>
           </div>
         <footer style="max-width: 650px; margin: 0 auto" class="pt-3">
@@ -212,7 +215,8 @@
                 ><i class="fas fa-phone-square-alt f-20 text-blue"></i> +91
                 9982-991-199</a
               >|<a
-                href="sales@kgkrealty.com"
+              href="mailto: mail@kgkrealty.com"
+              target="_blank"
                 class="tel-sells nexalight gray f-20 f-md-11"
                 ><i class="fas fa-envelope f-16 text-blue"></i>
                 mail@kgkrealty.com</a
@@ -221,17 +225,17 @@
           </div>
           <div class="social-links mt-3">
             <div class="text-center">
-              <a href="https://www.facebook.com/kgkrealty/"
+              <a href="https://www.facebook.com/kgkrealty/" target="_blank"
                 ><i class="fab fa-facebook-square f-20 text-blue"></i
               ></a>
-              <a href="https://www.instagram.com/kgk_realty/?hl=en"
+              <a href="https://www.instagram.com/kgk_realty/?hl=en" target="_blank"
                 ><i class="fab fa-instagram f-20 text-blue"></i
               ></a>
-              <a href="https://twitter.com/kgkrealty"
+              <a href="https://twitter.com/kgkrealty" target="_blank"
                 ><i class="fab fa-twitter-square f-20 text-blue"></i
               ></a>
-              <a href="https://www.linkedin.com/company/kgk-realty/"><i class="fab fa-linkedin f-20 text-blue"></i></a>
-              <a href="https://www.kgkrealty.com/"
+              <a href="https://www.linkedin.com/company/kgk-realty/" target="_blank"><i class="fab fa-linkedin f-20 text-blue"></i></a>
+              <a href="https://www.kgkrealty.com/" target="_blank"
                 ><span class="nexabold gray f-20">kgkrealty</span></a
               >
             </div>
