--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@
           </section>
           <div class="bg-blue pb-1 pt-1">
             <div class="text-center">
-              <a class="nexabold text-white f-19" href="https://www.kgkrealty.com/jaipurproperty/amulyaprop/" target="_blank">Want to know more...? Click here!</a>
+              <a class="nexabold text-white f-19" href="https://www.kgkrealty.com/jaipurproperty/amulyaprop/" target="_blank">Want to know more? Click here!</a>
             </div>
           </div>
-        <footer style="max-width: 650px; margin: 0 auto" class="pt-3">
+          <footer style="max-width: 650px; margin: 0 auto" class="pt-3">
             <div class="pt-3">
                 <hr />
                 <h2 class="text-center nexabold gray f-16 pt-1 pb-1 f-md-10">
@@ -214,11 +214,12 @@
                 class="tel-sells nexalight gray f-20 f-md-11"
                 ><i class="fas fa-phone-square-alt f-20 text-blue"></i> +91
                 9982-991-199</a
-              >|<a
+              >&nbsp;&nbsp;<a
               href="mailto: mail@kgkrealty.com"
               target="_blank"
                 class="tel-sells nexalight gray f-20 f-md-11"
-                ><i class="fas fa-envelope f-16 text-blue"></i>
+                >
+                <i class="fas fa-envelope-square f-20 text-blue"></i>
                 mail@kgkrealty.com</a
               >
             </h3>
